Sutter Health/src/objects/Claim_Header__c.object
<CustomObject>
    <description>The Claim Header object is used to store all claims information for SHP Members.</description>
    <fields>
        <fullName>ClaimMemberIdField__c</fullName>
        <description>This field is used for the custom search.</description>
        <label>ClaimMemberIdField</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Amount_Allowed__c</fullName>
        <label>Claim Amount Allowed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Claim_Amount_Billed__c</fullName>
        <label>Claim Amount Billed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Claim_Amount_Copay__c</fullName>
        <label>Claim Amount Copay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Claim_Amount_Deductible__c</fullName>
        <label>Claim Amount Deductible</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Claim_Amount_Paid__c</fullName>
        <label>Claim Amount Paid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Claim_Amount_Patient_Responsibility__c</fullName>
        <label>Claim Amount Patient Responsibility</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Claim_IsOutOfArea_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Claim IsOutOfArea Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Claim_Status__c</fullName>
        <label>Claim Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practitioner_First_Name__c</fullName>
        <label>Practitioner First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practitioner_HCC_ID__c</fullName>
        <label>Practitioner HCC ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practitioner_Last_Name__c</fullName>
        <label>Practitioner Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practitioner_Middle_Name__c</fullName>
        <label>Practitioner Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practitioner_Name__c</fullName>
        <label>Practitioner Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHPClaimHdr_Claim_Date_of_Receipt__c</fullName>
        <description>Receipt date of a specific claim when received by SHP.</description>
        <label>Claim Date of Receipt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SHPClaimHdr_Claim_DoS_End__c</fullName>
        <label>Claim End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SHPClaimHdr_Claim_DoS_Start__c</fullName>
        <label>Claim Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SHPClaimHdr_Claim_HCC_ID__c</fullName>
        <description>Primary key and best static identifier from HealthRules</description>
        <label>Claim HCC ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHPClaimHdr_Claim_HR_ID__c</fullName>
        <description>Secondary key from HealthRules, used to ensure differentiation from the HCC ID</description>
        <label>Claim HR ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHPClaimHdr_Diagnosis_Code_Description_E__c</fullName>
        <label>Claim Diagnosis Code Description</label>
        <length>50</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>SHPClaimHdr_Diagnosis_Code_E__c</fullName>
        <label>Claim Diagnosis Code</label>
        <length>50</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>SHPClaimHdr_Diagnosis_Code_HR_ID_E__c</fullName>
        <description>Diagnosis Code ID associated to a specific claim.</description>
        <label>Claim Diagnosis Code HR ID</label>
        <length>19</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>SHPClaimHdr_External_ID__c</fullName>
        <description>External ID used to match a Claim Header record to the original record in HealthEdge when updating and/or inserting.
 Composite key created from the concatenation of  SHPClaimHdr_Member_HR_ID__c + SHPClaimHdr_Claim_HR_ID__c (Claim Header)</description>
        <externalId>true</externalId>
        <inlineHelpText>HealthEdge Claim ID</inlineHelpText>
        <label>Claim External ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SHPClaimHdr_Member_HCC_ID__c</fullName>
        <description>Primary key and best static identifier from HealthRules</description>
        <label>Claim Member HCC ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHPClaimHdr_Member_HR_ID__c</fullName>
        <description>Secondary key from HealthRules, used to ensure differentiation from the HCC ID</description>
        <label>Claim Member HR ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHPClaimHdr_Member_ID__c</fullName>
        <description>Member ID of a member associated to a specific claim.</description>
        <label>Claim Member ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHPClaimHdr_Member_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Contact object to associate claims with members.</description>
        <label>Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Claim Headers</relationshipLabel>
        <relationshipName>Claim_Header_Member</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SHPClaimHdr_Procedure_Code_Description_E__c</fullName>
        <label>Claim Procedure Code Description</label>
        <length>50</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>SHPClaimHdr_Procedure_Code_E__c</fullName>
        <description>Procedure code associated to a specific claim.</description>
        <label>Claim Procedure Code</label>
        <length>10</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>SHPClaimHdr_Procedure_Code_HR_ID_E__c</fullName>
        <description>Procedure code ID associated to a specific claim.</description>
        <label>Claim Procedure Code HR ID</label>
        <length>19</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>SHPClaimHdr_Subscriber_HCC_ID__c</fullName>
        <label>Claim Subscriber HCC ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHPClaimHdr_Subscriber_HR_ID__c</fullName>
        <description>Subscriber ID associated to a specific claim.</description>
        <label>Claim Subscriber HR ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHPClaimHdr_Supplier_Epic_ID__c</fullName>
        <description>Supplier Epic ID associated to a specific claim.</description>
        <label>Claim Supplier Epic ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHPClaimHdr_Supplier_HCC_ID__c</fullName>
        <description>Primary key and best static identifier from HealthRules</description>
        <label>Claim Supplier HCC ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHPClaimHdr_Supplier_HR_ID__c</fullName>
        <description>Secondary key from HealthRules, used to ensure differentiation from the HCC ID</description>
        <label>Claim Supplier HR ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHPClaimHdr_Supplier_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Contact object to associate claims with suppliers.</description>
        <label>Supplier</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Claim Headers (Supplier)</relationshipLabel>
        <relationshipName>Claim_Header_Supplier</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SHPClaimHdr_Supplier_Name__c</fullName>
        <description>Supplier associated to a specific claim.</description>
        <label>Claim Supplier Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Claim Header</label>
    <listViews>
        <fullName>SHP_Claim_Header</fullName>
        <columns>NAME</columns>
        <columns>SHPClaimHdr_Member_HCC_ID__c</columns>
        <columns>SHPClaimHdr_Member_Lookup__c</columns>
        <columns>SHPClaimHdr_Claim_Date_of_Receipt__c</columns>
        <filterScope>Everything</filterScope>
        <label>SHP Claim Header</label>
    </listViews>
    <nameField>
        <label>Claim ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claim Headers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>